Bug 358483 - prioritize active document while parsing
Summary: prioritize active document while parsing
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: language (other bugs)
Version First Reported In: git master
Platform: Other Linux
: VHI normal
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2016-01-24 14:04 UTC by Milian Wolff
Modified: 2016-03-15 21:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2016-01-24 14:04:22 UTC
When restarting KDevelop with a session that opens up many files we currently don't prioritize the currently active document. Note that this also changes repeatedly at startup as the documents get reopened from the last run. We probably need to add some timer there and then increase the priority for the active document's parsejob somehow.

Reproducible: Always
Comment 1 Kevin Funk 2016-03-15 21:29:17 UTC
Git commit cc205959b1df4a00a58823adb9382edac1160a67 by Kevin Funk.
Committed on 15/03/2016 at 21:27.
Pushed by kfunk into branch '5.0'.

DUChain: Prioritize active documents

Prioritize document parsing in the background parser for documents which
just have been activated (i.e. the UI switched to a view of this
particular document).

Testing: Start up heaptrack session, with around 20 tabs open. Switch to
another tab at start up.
Observation: See that the current document in the tab gets a high priority in the background parser.
Differential Revision: D1145

M  +19   -5    language/duchain/duchain.cpp

http://commits.kde.org/kdevplatform/cc205959b1df4a00a58823adb9382edac1160a67